--- a/SSDataAnalysis.nb.Rmd
+++ b/SSDataAnalysis.nb.Rmd
@@ -1,29 +1,30 @@
----
-title: "Read Data, Cluster and make UMAP"
+----
+title: "Friday meeting single cell analysis"
 ---
 
-```{r,message=FALSE,warning=FALSE}
+```{r,include=FALSE}
 library(CATALYST)
 library(flowCore)
-library(cowplot)
-# library('tidyverse')
-# library(diffcyt)
-# library(scater)
-# library(SingleCellExperiment)
-# library(dplyr)
+library(cowplot) 
+library(ggplot2)
+library(dplyr)
+library(diffcyt)
+```
 
-pathtosamples <- ""
-FileNames = as.data.frame(list.files(path=pathtosamples,pattern='.fcs',full.names=TRUE)) #SEG)
-fcs <- FileNames$`list.files(path = pathtosamples, pattern = ".fcs", full.names = TRUE)`
-colnames(FileNames) <- "filenames"
-frame=read.FCS(FileNames$filenames[1]) # Read the first file to look at the channel names
-#write.csv2(x = pData(parameters(frame))[,2], file = "panelbigdataset.csv") # Have a look at all the channels names and numbers
 
-FuncInds <- c(22,	25,	26,	27,	29,	31,	33,	39,	45,	68) # Choose the  functional markers
-ToUse <- c(10,	11,	12,	13,	14,	20,	28,	30,	32,	35,	42,	43,	44,	54, 59,	62,	64,	67,	69,	71) # Choose the clustering/dimentionality reduction channels
+### Set up SCE
+```{r}
+# Read a file from the dataset
+pathtosamples <- "Data"
+frame <- read.FCS(list.files(path=pathtosamples,pattern='.fcs',full.names=TRUE)[[1]]) 
+write.csv2(x = pData(parameters(frame))[,2], file = "panel_FM.csv") # Have a look at all the channels names and numbers
 
-pData(parameters(frame))[,2][FuncInds] # Check your selection of functional markers
-pData(parameters(frame))[,2][ToUse] # Check your selection of  markers for clustering/dimensionality reduction
+FuncInds <- c(36,	37,	39,	42,	44,	51,	52,	56,	57,	61) # Functional markers
+ToUse <- c(7,	15,	16,	18,	19, 31,	33,	34,	40,	41,	43,	46,	49,	58,	60,	71) # Clustering/DR
+
+# Check
+pData(parameters(frame))[,2][FuncInds] 
+pData(parameters(frame))[,2][ToUse] 
 
 # Make the panel
 signaling <- pData(parameters(frame))[FuncInds,1:3]
@@ -35,18 +36,17 @@ rownames(panel) <- NULL
 colnames(panel) <- c("fcs_colname", "antigen","marker_class")
 panel
 
-# Read meta from file. Columnames: filename (FULL path), file_name, patient_id, condition, class
-meta <- read.csv("Bigdata_PBPS.csv")
-meta$filename <- gsub("mmasg", "stein-erikgullaksen", meta$filename)
-meta$sample_id <- sample_id <- paste0(meta$condition, "_",meta$patient_id)
+meta <- read.csv2("meta_FMair.csv") # Read meta from file.
+meta$sample_id <- sample_id <- paste0(meta$Stim, "_",meta$condition)
 meta
 ```
+
 
 ### Read inn the data using the panel and metadata
 ```{r, message=FALSE,warning=FALSE}
 # Subsampling 
 set.seed(0) # Being reproducible is a plus
-sampling.ceiling <- 100000
+sampling.ceiling <- 10000
 
 fullframe <- read.flowSet(meta$filename, transformation = FALSE, truncate_max_range = FALSE)
 fsApply(fullframe, nrow)
@@ -56,20 +56,22 @@ fs.ds <- fsApply(fullframe, function(ff) {
 })
 fsApply (fs.ds, nrow)
 
-sce = prepData(fs.ds, panel, meta, md_cols = list(factors = c("sample_id", "condition", "patient_id")))
+sce = prepData(fs.ds, panel, meta, md_cols = list(factors = colnames(meta)))
 sce
 fs.ds <- NULL
 fullframe <- NULL
 ```
 
+
 ### Show the number of cells in each sample
 ```{r}
 plotCounts(sce, 
-    group_by = "sample_id", 
-    color_by = "condition")
+    group_by = "patient_id", 
+    color_by = "Stim")
 ```
 
-### Use FlowSOM to cluster data:/
+
+### Use FlowSOM to cluster data
 ```{r}
 ## FlowSOM
 ptm <- proc.time()
@@ -81,30 +83,30 @@ proc.time() - ptm
 # UMAP
 ptm <- proc.time()
 set.seed(1601)
-sce <- runDR(sce, dr = "UMAP", cells = 8964, features = "type") # cells is per sample!
+sce <- runDR(sce, dr = "UMAP", cells = 10000, features = "type") # cells is per sample!
 proc.time() - ptm # How long does it take? Elapsed is in seconds
 
 # Save the data for late use
-saveRDS(sce, file ="sceEdanPBPS_Spike.RData")
+saveRDS(sce, file ="sceFM.RData")
 ```
+
 
 ### If you are reading the SCE from Rdata
 ```{r}
-#sce <- readRDS("sceEdanPBPS_Spike.RData")
+sce <- readRDS("sceFM.RData")
 ```
 
-```{r}
-# Keywords for making file names for later that is understandable
-# keyword <- c("all_noLC") # what selection on markers were used for clustering/dimensionality reduction?
 
-testparams <- c("meta15", "meta20", "meta25", "meta30")
+### Make som plot to help in cluster merging and annotation
+```{r}
+testparams <- c("meta10", "meta20")
 
 p <- plotDR(sce, color_by = type_markers(sce))
 p$facet$params$ncol <- 4
 p <- p+theme_cowplot()
-ggsave(filename = paste0("TypemarkersUMAP", ".jpeg",sep=""),
-       width = 14,
-       height = 11)
+ggsave(filename = paste0("TypemarkersUMAP", ".jpeg",sep=""),width =300,
+       height = 300,
+       units = "mm")
 p
 
 for (i in 1:length(testparams)){
@@ -139,51 +141,45 @@ for (i in 1:length(testparams)){
   print(p)
   dev.off()
   
-  u <- sce
-  design <- createDesignMatrix(ei(u), cols_design = "condition")
-  contrast <- createContrast(c(0, 1))
-  res_DA <- NULL
-  tbl_DA<- NULL
-
-  res_DS <- diffcyt(u, 
-                  clustering_to_use = testparams[i],
-                  analysis_type = "DS", 
-                  method_DS = "diffcyt-DS-limma",
-                  design = design, 
-                  contrast = contrast, 
-                  verbose = FALSE)
-tbl_DS <- rowData(res_DS$res)
-nosign <- length(tbl_DS$ID[tbl_DS$p_adj<=0.1])
-
-p <- plotDiffHeatmap(u, tbl_DS, all = TRUE, top_n = 12, fdr = 0.1, 
-    sort_by = "padj", col_anno = "condition", normalize =TRUE)
+  p <- ggplot(na.omit(data.frame(as.data.frame(reducedDim(sce, "UMAP")), "ClusterID" = cluster_ids(sce, k = testparams[i])), 
+               cols = 1)) + 
+  geom_point(aes(x=V1, y=V2, color=ClusterID)) + 
+  facet_wrap(vars(ClusterID)) + 
+  theme_cowplot()
+  ggsave(file = paste0("ClusterloopUMAP",testparams[i], ".jpeg",sep=""), width =300, 
+       height = 300, 
+       units = "mm")
+  p
   
-  
-  
-  name <- paste0("Signal_limma",testparams[i], ".pdf",sep="")
-  pdf(file = name)
-  print(p)
-  dev.off()
+    # Boxplots
+  p <- plotAbundances(sce, k = testparams[i], by = "cluster_id", 
+    group_by = "Stim", shape_by = "condition")
+  p <- p+theme_cowplot()
+  ggsave(filename = paste0("Boxplots_",testparams[i], ".jpeg",sep=""))
 }
-
 ```
 
-### Cluster annotation and merging. Do this after the plotting below. 
+
+### Print heatmap to make table for cluster annotation and merging
 ```{r}
 # Print out the medians for each cluster
 p <- plotExprHeatmap(sce, features = "type",
-    by = "cluster_id", k = "meta15",
+    by = "cluster_id", k = "meta10",
     scale ="never", q = 0.01,bars = TRUE, perc = TRUE, col_dend = TRUE)
-write.csv(as.data.frame(p@matrix), file = paste0("heatmap_noscaled", ".csv",sep=""))
 
-# Key to merge and annotate
-cluster_merge <- read.csv("merging_table.csv") # Needs exactly columnames : old_cluster and new_cluster
+write.csv(as.data.frame(p@matrix), file = paste0("heatmap_noscaled", ".csv",sep=""))
+```
+
+
+### Merge and annotate
+```{r}
+cluster_merge <- read.csv("merging_table.csv", sep=";") # Needs exactly columnames : old_cluster and new_cluster
 head(cluster_merge)
-sce <- mergeClusters(sce, k = "meta15", table = cluster_merge, id = "merged", overwrite = TRUE)
+sce <- mergeClusters(sce, k = "meta10", table = cluster_merge, id = "merged", overwrite = TRUE)
 head(cluster_codes(sce))
 
 # Save the annotated data for late use
-saveRDS(sce, file ="EdanAnnotatedPBPS.RData")
+saveRDS(sce, file ="annotatedsceFM.RData")
 ```
 
 
@@ -229,22 +225,28 @@ print(p)
 dev.off()
 
   
-p <- plotAbundances(sce, k = testparams, by = "sample_id", group_by = "patient_id", )
+p <- plotAbundances(sce, k = testparams, by = "sample_id", group_by = "patient_id")
 ggsave(p,filename = paste0("annotated_columnplot",testparams, ".pdf",sep=""), device = "pdf",
        width = 4,
        height = 8)
 
+  # Boxplots
+p <- plotAbundances(sce, k = testparams, by = "cluster_id", group_by = "Stim", shape_by = "condition")
+  p <- p+theme_cowplot()
+  ggsave(filename = paste0("annotatedBoxplots_", testparams, ".jpeg",sep=""))
+
 ```
+
 
 ### Abundance and State difference testing
 ```{r}
 u <- sce
 testparams <- "merged"
 
-unique(u$condition)
+unique(u$Stim)
 
 # create design & constrast matrix
-design <- createDesignMatrix(ei(u), cols_design = "condition")
+design <- createDesignMatrix(ei(u), cols_design = "Stim")
 contrast <- createContrast(c(0, 1))
 
 # Test for differential abundance (DA) of clusters and differential states (DS) within clusters
@@ -261,11 +263,11 @@ pdf(file = paste0("Abund_edgeR",testparams, ".pdf",sep=""),
     width = 11.7, # The width of the plot in inches
     height = 16.5)
 plotDiffHeatmap(u, tbl_DA, all = TRUE, fdr = 0.1, 
-    sort_by = "lfc", col_anno = "condition", normalize =TRUE)
+    sort_by = "lfc", col_anno = "Stim", normalize =TRUE)
 dev.off()
 
 plotDiffHeatmap(u, tbl_DA,all = TRUE, fdr = 0.1, 
-    sort_by = "lfc", col_anno = "condition", normalize =TRUE)
+    sort_by = "lfc", col_anno = "Stim", normalize =TRUE)
 
 res_DA <- NULL
 tbl_DA<- NULL
@@ -283,11 +285,11 @@ pdf(file = paste0("Abund_Voom",testparams, ".pdf",sep=""),
    width = 11.7, # The width of the plot in inches
     height = 16.5)
 plotDiffHeatmap(u, tbl_DA,all = TRUE, fdr = 0.1, 
-    sort_by = "lfc", col_anno = "condition", normalize =TRUE)
+    sort_by = "lfc", col_anno = "Stim", normalize =TRUE)
 dev.off()
 
 plotDiffHeatmap(u, tbl_DA,all = TRUE, fdr = 0.1, 
-    sort_by = "lfc", col_anno = "condition", normalize =TRUE)
+    sort_by = "lfc", col_anno = "Stim", normalize =TRUE)
 
 res_DA <- NULL
 tbl_DA<- NULL
@@ -306,13 +308,14 @@ pdf(file = paste0("Signal_limma",testparams, ".pdf",sep=""),
     width = 11, # The width of the plot in inches
     height = 8)
 plotDiffHeatmap(u, tbl_DS, all = TRUE, top_n = 12, fdr = 0.1, 
-    sort_by = "padj", col_anno = "condition", normalize =TRUE)
+    sort_by = "padj", col_anno = "Stim", normalize =TRUE)
 dev.off()
 
 plotDiffHeatmap(u, tbl_DS, all = TRUE, top_n = 12, fdr = 0.1, 
-    sort_by = "padj", col_anno = "condition", normalize =TRUE)
+    sort_by = "padj", col_anno = "Stim", normalize =TRUE)
 
 ```
+
 
 ### Get data on each cluster in each sample
 ```{r}
@@ -368,6 +371,7 @@ colnames(ClusterData) <- c("sample_id", "population", "DC_80th", "protein", "pat
 write_csv(ClusterData, file = paste0("Clusterdata",metaclust, ".csv",sep=""))
 ```
 
+
 ## Make some nice plots of the patient data
 ```{r}
 colnames(ClusterData)
@@ -392,4 +396,67 @@ for (i in 1:length(testparams)){
 }
 ```
 
+#density patient umaps
+```{r}
+testparams <- c("merged")
+
+p <- plotDR(sce, color_by = testparams, facet_by = "patient.id", ncol=1)
+
+q <- p$data
+
+p <- ggplot(q, aes(x, y)) + 
+    stat_density_2d(aes(fill=..level..), geom="polygon",bins=8) +
+  scale_fill_gradientn(colours = c("black","darkorchid", "darkgoldenrod1"), values = scales::rescale()) + 
+  facet_wrap(q$patient.id, nrow = 1) +
+  theme_cowplot()
+p
+
+ggsave(p, filename = "Densitypatienumap.pdf", device = "pdf",
+       width = 20,
+       height = 4)
+
+
+```
+
+
+# Historgam Overlays
+```{r}
+# Historgam Overlays
+u <- filterSCE(sce, k = "merged")
+
+metaclust <- "merged"
+
+# Get 80th percentile values for all channels 
+scdf <- data.frame(t(assay(u, "exprs")[state_markers(u), ]), 
+                   sample_id = u$sample_id, 
+                   cluster_id = (dplyr::select(cluster_codes(u), metaclust))[u$cluster_id,], 
+                   check.names = FALSE)
+scdf$sample_id <- as.character(scdf$sample_id)
+s <- scdf$sample_id[1]
+#"time"       "trial"      "staining"   "patient" 
+
+get_pat <- function(s) {
+  pat <-  paste0(strsplit(s, "_")[[1]][2],"_", strsplit(s, "_")[[1]][1])
+  return(pat)
+}
+
+get_con <- function(s) {
+  con <-  strsplit(s, "_")[[1]][1]
+  return(con)
+}
+
+scdf <- scdf %>% rowwise() %>% mutate(patient = get_pat(sample_id), 
+                                                    condition = get_con(sample_id))
+
+scdf2 <- rbind(scdf %>% filter((cluster_id == "Monocytes")), scdf %>% filter((cluster_id == "TcEMRA/NKT")))
+
+e<-ggplot(scdf2, aes(x=`pSTAT3_Y705`, y=`sample_id`, color=`sample_id`, fill = `sample_id`)) + 
+  geom_density_ridges() +theme_cowplot() + facet_wrap(~cluster_id )
+ggsave(e,filename = paste0("PB_IFNa_pSTAT3_Y705.pdf"), width = 7, height = 7)
+
+e<-ggplot(scdf2, aes(x=`pSTAT1_Y701`, y=`sample_id`, color=`sample_id`, fill = `sample_id`)) + 
+  geom_density_ridges() +theme_cowplot() + facet_wrap(~cluster_id )
+ggsave(e,filename = paste0("PB_IFNa_pSTAT1_Y701.pdf"), width = 7, height = 7)
+
+```
 
